# mulyidocs

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  database.py  models.py
app/agent/: engine.py  prompts.py  tools.py
app/api/: deps.py  router.py  schemas.py
app/generator/: codegen.py
app/indexing/: loader.py  parser.py  pipeline.py
app/mcp/: server.py
app/telegram/: audio.py  formatter.py  handlers.py  webhook.py
docs/: docs.json  docs.md
scripts/: index.py  mcp_server.py
static/: index.html
tests/: test_api.py  test_generator.py  test_generator_eval.py  test_indexing.py  test_telegram.py
